--- a/ch3/examples/CMakeLists.txt
+++ b/ch3/examples/CMakeLists.txt
@@ -1,7 +1,23 @@
-include_directories("/usr/include/eigen3")
-add_executable(coordinateTransform coordinateTransform.cpp)
+cmake_minimum_required(VERSION 2.8)
+project(examples)
 
+set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_CXX_FLAGS "-O3")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# eigen
+find_package(Eigen3 REQUIRED)
+include_directories(
+    ${EIGEN3_INCLUDE_DIR}
+)
+add_definitions(${EIGEN_DEFINITIONS})
+
+# pangolin
+set(Pangolin_DIR "~/Documents/slambook2/3rdparty/Pangolin/build/installed")
 find_package(Pangolin REQUIRED)
 include_directories(${Pangolin_INCLUDE_DIRS})
+
+
+add_executable(coordinateTransform coordinateTransform.cpp)
 add_executable(plotTrajectory plotTrajectory.cpp)
 target_link_libraries(plotTrajectory ${Pangolin_LIBRARIES})
