--- a/ch3/visualizeGeometry/CMakeLists.txt
+++ b/ch3/visualizeGeometry/CMakeLists.txt
@@ -1,14 +1,21 @@
 cmake_minimum_required( VERSION 2.8 )
 project( visualizeGeometry )
 
-set(CMAKE_CXX_FLAGS "-std=c++11")
+set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_CXX_FLAGS "-O3")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# 添加Eigen头文件
-include_directories( "/usr/include/eigen3" )
+# eigen
+find_package(Eigen3 REQUIRED)
+include_directories(
+    ${EIGEN3_INCLUDE_DIR}
+)
+add_definitions(${EIGEN_DEFINITIONS})
 
-# 添加Pangolin依赖
-find_package( Pangolin )
-include_directories( ${Pangolin_INCLUDE_DIRS} )
+# pangolin
+set(Pangolin_DIR "~/Documents/slambook2/3rdparty/Pangolin/build/installed")
+find_package(Pangolin REQUIRED)
+include_directories(${Pangolin_INCLUDE_DIRS})
 
 add_executable( visualizeGeometry visualizeGeometry.cpp )
 target_link_libraries( visualizeGeometry ${Pangolin_LIBRARIES} )
