--- a/ch5/stereo/CMakeLists.txt
+++ b/ch5/stereo/CMakeLists.txt
@@ -1,4 +1,5 @@
-find_package(Pangolin REQUIRED)
+PROJECT(stereo)
 
+# stereoVision
 add_executable(stereoVision stereoVision.cpp)
 target_link_libraries(stereoVision ${OpenCV_LIBS} ${Pangolin_LIBRARIES})
