--- a/ch07/CMakeLists.txt
+++ b/ch07/CMakeLists.txt
@@ -1,11 +1,13 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
 PROJECT(VO1)
 
-SET(CMAKE_BUILD_TYPE "Release")
-ADD_DEFINITIONS("-DENABLE_SSE") # 使用SSE指令集
-SET(CMAKE_CXX_FLAGS "-std=c++11 -O2 ${SSE_FLAGS} -msse4")
+# SET(CMAKE_BUILD_TYPE "Release")
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+
+ADD_DEFINITIONS("-DENABLE_SSE") # 使用SSE指令集
+SET(CMAKE_CXX_FLAGS "-std=c++11 -O2 ${SSE_FLAGS} -msse4")
+
 
 
 #### LINK
