ch8: LK optical flow

--- a/ch07/CMakeLists.txt
+++ b/ch07/CMakeLists.txt
@@ -5,7 +5,8 @@ PROJECT(VO1)
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
-ADD_DEFINITIONS("-DENABLE_SSE") # 使用SSE指令集
+# 使用SSE指令集
+ADD_DEFINITIONS("-DENABLE_SSE") 
 SET(CMAKE_CXX_FLAGS "-std=c++11 -O2 ${SSE_FLAGS} -msse4")
 
 
