--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(SLAMBOOL2)
+project(SLAMBOOK2)
 
 # 设置环境支持C++14
 set(CMAKE_CXX_STANDARD 14)
@@ -14,3 +14,4 @@ add_subdirectory(chapter_demo/ch03)
 add_subdirectory(chapter_demo/ch04)
 add_subdirectory(chapter_demo/ch05)
 add_subdirectory(chapter_demo/ch06)
+add_subdirectory(chapter_demo/ch07)
