--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(chapter_demo/ch04)
 add_subdirectory(chapter_demo/ch05)
 add_subdirectory(chapter_demo/ch06)
 add_subdirectory(chapter_demo/ch07)
+add_subdirectory(chapter_demo/ch08)
